cluster/apps/media/radarr/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr-svc
  namespace: media
subsets:
- addresses:
  - ip: ${SECRET_MEDIA_STACK_IP_ADDRESS}
  ports:
  - name: radarr-app
    port: 80
    protocol: TCP
