cluster/apps/media/radarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media
spec:
  ports:
  - name: radarr-app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
